# AI-Research-Assistant-Backend

./: .gitignore  README.md  pyproject.toml  report.md  verify_dynamic_endpoint.py
results/: 37caf71e-f489-42f8-8a00-75ccfd3bf95a.json  5c3cea13-681c-44d0-b09d-12302dcc1e51.json  68efdda5-6ad1-4337-b720-5ea600f7f2a3.json  c77b22d3-5d1d-418b-a621-4f229fd5c3dc.json  fdc72cfb-2433-4388-899b-41cd30f7c151.json
src/ai_research_backend/: api.py  crew.py  job_manager.py  main.py  models.py
src/ai_research_backend/config/: agents.yaml  tasks.yaml
src/ai_research_backend/tools/: arxiv_tool.py
