[project]
name = "ai_research_backend"
version = "0.1.0"
description = "ai-research-backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "tavily-python>=0.7.12",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
ai_research_backend = "ai_research_backend.main:run"
run_crew = "ai_research_backend.main:run"
train = "ai_research_backend.main:train"
replay = "ai_research_backend.main:replay"
test = "ai_research_backend.main:test"
run_api = "ai_research_backend.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
